1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* objectbase.h: Include defobj.h.

	* Probe.m: Include collections.h.

	* ActivityControl.[hm]: Include activity.h.

1998-05-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m: #include avcall.h and ffi.h, not #import.

1998-05-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m ([Arguments -parseKey:arg:]): Send messages to
	self, not arguments.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* EmptyProbeMap.[hm]: Remove do-nothing -createEnd.

	* objectbase.h: Spacing changes in method declarations throughout.
	(ProbeConfig, DefaultProbeMap): Add description string.
	(CompleteProbeMap): Add phase tags.
	(EmptyProbeMap): Remove -createEnd.
	(CompleteVarMap): Add //S.

	* CustomProbeMap.m: Add phase tags.
	
	* CustomProbeMap.[hm]: Reformatting throughout.

1998-04-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (version.h): Extract SWARM_{MAJOR,MINOR,SUBMINOR} from
	version file.

	* Arguments.m (SIGNATURE_FILE): New symbol for filename that has
	version information.
	(findSwarm): Use it instead of "VERSION".  Use SWARM_VERSION
	instead of VERSION throughout.

1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ActivityControl.m, CustomProbeMap.m: Reformatting throughout.

	* ActivityControl.m, CompleteProbeMap.m, CustomProbeMap.m,
	MessageProbe.m, Probe.m, ProbeMap.m, Swarm.m, VarProbe.m: Move
	documentation tags to objectbase.h.

	* objectbase.h: Remove includes of SwarmObject.h and Swarm.h.

1998-04-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m ([MessageProbe -doubleDynamicCallOn:]): Convert
	for float, too.

1998-04-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Add //D: documentation comment tag for module.

1998-04-15  Irene Lee  <lee@wijiji.santafe.edu>

	* ActivityControl.m, CompleteProbeMap.m, CustomProbeMap.m,
	MessageProbe.m, Probe.m, ProbeLibrary.m, ProbeMap.m, Swarm.m,